--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <h1>Weather App</h1>
-        <button id='trigger'>Click Me!</button>
-        <h2>The weather today is:<span id='current-weather'></span></h2>
+        <label for="zipcode">Zip Code: </label>
+        <input type="text" name="zipcode" value="90210" label="Zip-Code" id="zipcode"></input>
+        <button id='trigger'>Get Weather</button>
+        <h2>The weather today is: <span id='current-weather'></span></h2>
         <script type='text/javascript' src='main.js'></script>
     </body>
 </html>
