Changes api call from being based on zipcode to being based upon latitude and longitude. Removes zipcode input from front site. Constructs an object to represent weather

--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     </head>
     <body>
         <h1>Weather App</h1>
-        <label for="zipcode">Zip Code: </label>
-        <input type="text" name="zipcode" value="90210" label="Zip-Code" id="zipcode"></input>
         <button id='trigger'>Get Weather</button>
-        <h2>The weather today is: <span id='current-weather'></span></h2>
+        <h2>The weather today is: <pre id='current-weather'></pre></h2>
         <script type='text/javascript' src='main.js'></script>
     </body>
 </html>
