Changes the index.html and main.js to dynamically load the current condition, load the current temperature and convert it to the users countries default, convert the pressure such that it conforms with users countries default

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     </head>
     <body>
         <div class='container'>
-            <div class='jumbotron'>
-                <h1 id='conditionId'>Rain</h1>
-                <p id='description'>Raining with a chance of meatballs</p>
+            <div class='jumbotron' id='weather-condition'>
             </div>
             <div class='row'>
                 <div class='col-md-12'>
@@ -32,8 +30,7 @@
             <div class='row'>
                 <div class='col-md-4'>
                     <h2>
-                        <span id='temperature-main'>64</span>&deg;
-                        <span id='temperature-unit'>F</span>
+                        <span id='temperature-main'></span>
                     </h2>
                 </div>
                 <div class='col-md-8'>
