Adds nightmode if the user is viewing it at night

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class='col-md-12'>
                     <img class='img-responsive'
                      alt='A themed picture representing the current weather'
-                     src='https://pixabay.com/static/uploads/photo/2013/07/13/13/12/dog-160561_960_720.png'
+                     src=''
                      id='condition-picture'>
                 </div>
             </div>
