--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
+      <div id="content-wrapper">
         <div class='container'>
             <div class='jumbotron' id='weather-condition'>
             </div>
@@ -41,6 +42,7 @@
                 </div>
             </div>
         </div>
+      </div>
         <script type='text/javascript' src='main.js'></script>
     </body>
 </html>
